kubernetes/entertainment/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: entertainment
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - "jelly.whoverse.nexus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
